style: fix modal content text color for dark mode

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -223,7 +223,7 @@ button.egg:focus {
     background-color: #333;
   }
 
-  .egglist p {
+  .egglist p, .modal-content {
     color: #222;
   }
 }
